name: source-map
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2012 Hamish Mackenzie
description: Library for working with JSON Source Maps
data-dir: ""

source-repository head
  type:     git
  location: https://github.com/ghcjs/source-map.git

library
    build-depends: base -any, text >=0.11 && <0.12,
                   aeson >=0.6 && <0.7, ghc-prim -any,
                   attoparsec >=0.10 && <0.11
    exposed-modules: Data.SourceMap
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test-source-map
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    build-depends: source-map ==0.1.0, base -any, QuickCheck >=2.4 && <2.5,
                   text >=0.11 && <0.12, aeson >=0.6 && <0.7,
                   attoparsec >=0.10 && <0.11
